# data_agent

./: .gitignore  README.md  main.py  pyproject.toml
app/agent/: context.py  costom_checkpoint.py  graph.py  llm.py
app/agent/nodes/: recall_column.py  recall_metric.py
app/api/config/: __init__.py  jwt_config.py
app/api/middleware/: __init__.py  auth_middleware.py
app/api/routers/: query_router.py  user_router.py
app/api/shemas/: user_schema.py
app/clients/: embedding_client.py  es_client_manager.py  milvus_client_manager.py  mysql_client_manager.py  qdrant_client_manager.py  siliconflow_embeding_client.py
app/clients/milvus_collections/: base_collection.py  data_agent_column_collection.py
app/conf/: app_config.py  config_loader.py
app/core/: decorators.py  log.py
app/dependencies/infrastructure/: db_session.py  embedding.py  es.py  milvus.py
app/dependencies/services/: query_service.py
app/entities/: vector_info.py
app/models/: chat_user.py  lg_checkpoint_mysql.py  lg_checkpoint_writes_mysql.py
app/repositories/es/: value_es_repository.py
app/repositories/milvus/: base_collection.py  column_milvus_repository.py  column_qdrant_repository.py  metric_milvus_repository.py
app/repositories/qdrant/: metric_qdrant_repository.py
app/scripts/: build_meta_knowledge.py
app/services/: meta_knowledge_service.py  query_service.py
conf/: app_config.yaml
data_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
docker/: docker-compose.yaml
frontend/: .gitignore  README.md  index.html  package-lock.json  package.json
frontend/src/: App.vue
(+8 files in other folders)
