[project]
name = "data-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.11.15"
dependencies = [
    "asyncmy>=0.2.11",
    "cryptography>=48.0.1",
    "elasticsearch[async]>=8,<9",
    "fastapi[standard]>=0.136.3",
    "jieba>=0.42.1",
    "langchain>=1.3.7",
    "langchain-huggingface>=1.2.2",
    "langchain-milvus==0.2.2",
    "langgraph>=1.2.4",
    "loguru>=0.7.3",
    "ollama>=0.6.2",
    "omegaconf>=2.3.1",
    "pymilvus==2.5.18",
    "pyyaml>=6.0.3",
    "qdrant-client>=1.18.0",
    "sqlalchemy>=2.0.50",
]



[tool.uv]
required-environments = [
  "sys_platform == 'darwin' and platform_machine == 'x86_64'",
  "sys_platform == 'darwin' and platform_machine == 'arm64'",
  "sys_platform == 'linux' and platform_machine == 'x86_64'",
  "sys_platform == 'linux' and platform_machine == 'aarch64'",
]
package = true

[[tool.uv.index]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple/"
default = true

[tool.setuptools.packages.find]
include = ["app*"]  # 只打包以 app 开头的文件夹，忽略 logs, docker, conf 等
